@@ -1,5 +1,6 @@
 ????? ??, 2013 - 5.0.3:
 
+Fixed bug  984: Cyclomatic complexity should treat constructors like methods
 Fixed bug  992: Class java.beans.Statement triggered in CloseResource rule
 Fixed bug  997: Rule NonThreadSafeSingleton gives analysis problem
 Fixed bug 1002: False +: FinalFieldCouldBeStatic on inner class
